# adventofcode2020

./: .adventofcode2020.cabal.swp  adventofcode2020.cabal
test/: .Spec.hs.swp  Spec.hs
