cabal-version: 2.2

name:           adventofcode2020
version:        0.1.0.0
build-type:     Simple

-- https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas
common deps
  build-depends:
      base >=4.7 && <5,
      text,
      time,
      extra
  ghc-options: -Wall 
  default-language: Haskell2010
  default-extensions: 
    OverloadedStrings

library
  import: deps 
  exposed-modules:
      Lib
  other-modules:
      Paths_adventofcode2020
  hs-source-dirs:
      src

executable adventofcode2020-exe
  import: deps 
  main-is: Main.hs
  other-modules:
      Paths_adventofcode2020
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      adventofcode2020

test-suite adventofcode2020-test
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Drivers.hs
  other-modules:
      Paths_adventofcode2020,
      Spec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      adventofcode2020,
      hspec,
      hspec-discover,
